web/composer: fix autocomplete not overflowing

--- a/web/src/ui/composer/Autocompleter.css
+++ b/web/src/ui/composer/Autocompleter.css
@@ -1,10 +1,11 @@
 div.autocompletions-wrapper {
 	position: relative;
+	grid-area: autocomplete;
 }
 
 div.autocompletions {
 	position: absolute;
-	bottom: 1px;
+	bottom: 0;
 	border-top: 1px solid var(--border-color);
 	border-right: 1px solid var(--border-color);
 	background-color: var(--background-color);
